--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,14 @@
+:root{
+    --fundo:white;
+    --borda:gray;
+    --fonte: black;
+    --detalhes:rgb(255, 136, 0);
+    --títulos:rgb(255, 179, 0);
+    --subtítulos: orange;
+    --fundoneutro:rgb(255, 210, 126);
+ 
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -35,7 +46,41 @@ body{
 /*bia*/
 
 
+ 
 
+    
+    .bia {
+        background-color: rgb(251, 251, 234);
+        display: flex;
+        width: 100%;
+        height: 500px;
+        
+        .search {
+            font-size: 17px;
+            font-family: Arial, Helvetica, sans-serif;
+            padding-left: 9%;
+            padding-top: 3%;
+}
+
+.visao {
+    font-size: 17px;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-left: 57%;
+    padding-top: 4%;
+    color: var(--títulos);
+}
+
+.bolinha1 {
+    background-color: var(--títulos);
+    width: 70%;
+    height: 15%;
+    border-radius: 50%;
+    color: white;
+    text-align: center;
+    margin-left: 130%;
+    align-items: start;
+}
+}
 
 
 
