--- a/assets/styles.css
+++ b/assets/styles.css
@@ -237,6 +237,87 @@ body{
 
 /*marcela*/
 
+.marcela{
+    background-color: rgb(36, 36, 36);
+     margin: 0;
+     padding: 0;
+
+    img{
+        width:100%;
+        height: 200px;
+        margin-top: 0%;
+        display: flex; ;
+    }
+    
+    
+    .rodapé{
+ background-color: rgb(36, 36, 36);
+ width: 100%;
+ height: 900px;
+ display: flex;
+}
 
 
+
+p{
+    color: rgba(255, 255, 255, 0.779);
+    display: flex;
+    justify-content: space-around;
+}
+
+h2{
+    color: rgb(209, 209, 209);
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    flex-direction: column;
+    
+}
+.titulo-rodape{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+
+    .primeiro{
+        display: flex;
+        justify-content: space-around;
+        align-content: center;
+        
+    }
+    
+    
+    hr{
+        width: 90%;
+        opacity: 0.3;
+    }
+    
+}
+
+.titulo-segundo { 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+    .titulo-segundo h2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .segundo{
+        display: flex;
+        justify-content: space-around;
+        align-content: center;
+        
+    }
+    
+    
+    hr{
+        width: 90%;
+        opacity: 0.3;
+    }
+    
+}
+}
 
