--- a/assets/styles.css
+++ b/assets/styles.css
@@ -52,32 +52,32 @@
         display: flex;
         width: 100%;
         height: 500px;
-        
+    }
         .search {
             font-size: 17px;
             font-family: Arial, Helvetica, sans-serif;
             padding-left: 9%;
             padding-top: 3%;
 }
+.bia1{
+    display: flex;
+}
 
 .visao {
     font-size: 17px;
     font-family:Arial, Helvetica, sans-serif;
-    padding-left: 57%;
+    /* padding-left: 57%; */
     padding-top: 4%;
     color: var(--títulos);
-
     display: flex;
     gap: 10px;
-
-    /* background-color: aqua; */
 }
 .visao h3{
     display: flex;
     padding-top: 0.75rem;
 }
 
-.bolinha1 {
+.bolinhas {
     background-color: var(--títulos);
     width: 3rem;
     height: 3rem;
@@ -85,10 +85,26 @@
     color: white;
     text-align: center;
 }
-.bolinha1 img{
+
+.bolinha img{
     margin-top: 20%;
 }
-    }
+
+.imagens {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 15rem;
+    width: 12rem;
+    gap: 15px;
+    /* height: 12rem; */
+    display: flex;
+    justify-content: space-between;
+}
+.imagens img {
+    width: 300px;
+    height: 300px;
+    border-radius: 10rem;
+}
 
 
 
