--- a/assets/styles.css
+++ b/assets/styles.css
@@ -694,36 +694,62 @@ body{
 
 /*bia*/
 .bia {
-    background-color: rgb(251, 251, 234);
+        background-color: rgb(251, 251, 234);
+        display: flex;
+        width: 100%;
+        height: 500px;
+    }
+        .search {
+            font-size: 17px;
+            font-family: Arial, Helvetica, sans-serif;
+            padding-left: 9%;
+            padding-top: 3%;
+}
+.bia1{
     display: flex;
-    width: 100%;
-    height: 500px;
-
-    .search {
-        font-size: 17px;
-        font-family: Arial, Helvetica, sans-serif;
-        padding-left: 9%;
-        padding-top: 3%;
-    }
-
-    .visao {
-        font-size: 17px;
-        font-family: Arial, Helvetica, sans-serif;
-        padding-left: 57%;
-        padding-top: 4%;
-        color: var(--títulos);
-    }
-
-    .bolinha1 {
-        background-color: var(--títulos);
-        width: 70%;
-        height: 15%;
-        border-radius: 50%;
-        color: white;
-        text-align: center;
-        margin-left: 130%;
-        align-items: start;
-    }
+}
+ 
+.visao {
+    font-size: 17px;
+    font-family:Arial, Helvetica, sans-serif;
+    /* padding-left: 57%; */
+    padding-top: 4%;
+    color: var(--títulos);
+    display: flex;
+    gap: 10px;
+}
+.visao h3{
+    display: flex;
+    padding-top: 0.75rem;
+}
+ 
+.bolinhas {
+    background-color: var(--títulos);
+    width: 3rem;
+    height: 3rem;
+    border-radius: 5rem;
+    color: white;
+    text-align: center;
+}
+ 
+.bolinha img{
+    margin-top: 20%;
+}
+ 
+.imagens {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 15rem;
+    width: 12rem;
+    gap: 15px;
+    /* height: 12rem; */
+    display: flex;
+    justify-content: space-between;
+}
+.imagens img {
+    width: 300px;
+    height: 300px;
+    border-radius: 10rem;
 }
 
 /*isadora*/
