--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,14 +1,7 @@
 
-:root{
-    --fundo:white;
-    --borda:gray;
-    --fonte: black;
-    --detalhes:rgb(255, 136, 0);
-    --títulos:rgb(255, 179, 0);
-    --subtítulos: orange;
 
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 
 *{
@@ -20,7 +13,7 @@ body{
     background-color: rgb(255, 255, 255);
 }
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
     background-color: white;
@@ -790,7 +783,7 @@ body{
     }
     
 /* configurações de todos os botões */
-    .botao {
+    .botao1 {
         margin: 60px;
         padding: 20px 60px;
         background-color: var(--botao);
@@ -798,7 +791,7 @@ body{
         align-items: center;
         justify-content: center;
         border-radius: 10px;
-        
+        color: var(--detalhes);
         box-shadow: 2px 22px 46px 2px rgba(255,165,0,0.58);
         -webkit-box-shadow: 2px 22px 46px 2px rgba(255,165,0,0.58);
         -moz-box-shadow: 2px 22px 46px 2px rgba(255,165,0,0.58);
@@ -815,7 +808,7 @@ body{
         
     }
  
-    .botao:hover{
+    .botao1:hover{
         background-color:var(--fundoneutro) ;
         transition: all 0.3s ease;
     }
@@ -917,11 +910,11 @@ input{
 }
 
 
-bUtton{
+button {
     width: 100px;
     height: 40px;
     border-radius: 5px;
-    border: 0px;
+    border: none;
     position: relative;
     bottom: 50px;
     margin-left: 10px;
