--- a/assets/styles.css
+++ b/assets/styles.css
@@ -733,7 +733,7 @@ body{
 
 }
  
-.bolinha img{
+.bolinhas img{
     margin-top: 20%;
 }
  
@@ -774,6 +774,10 @@ body{
     border-radius: 10rem;
 }
  
+
+
+
+
 
 /*isadora*/
 
