--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,9 +9,7 @@
     padding: 0;
 }
 
-body{
-    background-color: rgb(255, 255, 255);
-}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -772,6 +770,10 @@ body{
 
 .ISADORA {
 
+    body{
+    background-color: white;
+}
+
     /* Card 1 = correponde as configurações dos blocos de imagem e texto (cartões) */
 
     .card1 {
@@ -848,6 +850,7 @@ body{
         
     }
     
+    /* Configurações de cardápio (botão)*/
     .Cardapio {
         text-align: center;
         color:black;
@@ -856,18 +859,19 @@ body{
         transition: all 0.3s ease;
         
     }
- 
+ /* Configurações de botão, animações e efeitos de cor*/
     .botao1:hover{
         background-color:var(--fundoneutro) ;
         transition: all 0.3s ease;
     }
     
-    
+     /* Card 2 = correponde as configurações dos blocos de imagem e texto (cartões) */
     .card2{
         padding: 5%;
         background-color: var(--fundo);
     }
     
+     /* Card 3 = correponde as configurações dos blocos de imagem e texto (cartões) */
     .card3{
         padding: 5%;
         background-color: var(--fundo);
